--- a/ParkRoutePlanner/ParkRoutePlanner.csproj
+++ b/ParkRoutePlanner/ParkRoutePlanner.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="todos\03-04.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="todos\03-04.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
+  </ItemGroup>
+
 </Project>
