--- a/ParkRoutePlanner/ParkRoutePlanner.csproj
+++ b/ParkRoutePlanner/ParkRoutePlanner.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
   </ItemGroup>
